Track.java implemented and TrackTest.java implemented. Tests all pass.